--- a/responsive.css
+++ b/responsive.css
@@ -88,20 +88,20 @@
 
   .main_home {
     width: 100%;
-    height: auto;
+    height: 100vh;
     display: flex;
     align-items: center;
-    justify-content: center;
+    /* justify-content: center; */
     flex-wrap: wrap;
-    margin-top: 70px;
+    /* margin-top: 70px; */
   }
 
   .main_home .banner {
-    margin-left: 20px;
+    /* margin-left: 20px; */
   }
 
   .main_home .banner img {
-    width: 350px;
+    width: 320px;
   }
 
   .cards {
@@ -115,8 +115,8 @@
   }
 
   .main_content {
-    margin-top: 20px;
-    margin-bottom: 20px;
+    margin-top: 120px;
+    margin-left: 20px;
   }
 
   .aboutus img {
@@ -134,7 +134,7 @@
 
   .main_content .buttons button {
     font-size: 13px;
-    width: 140px;
+    /* width: 140px; */
   }
 
   .aboutus p {
@@ -183,7 +183,7 @@
   }
 
   .services .heading p {
-    font-size: 13px;
+    font-size: 14px;
     width: 300px;
   }
 
@@ -250,15 +250,24 @@
     margin: 0;
     flex-direction: column;
     position: relative;
-    overflow: hidden;
+    /* overflow: hidden; */
     margin-top: 40px;
   }
 
-  .booth {
-    display: none;
+  .right {
+    width: 100%;
   }
 
-  footer .top {
+  .right img {
+    width: 100px;
+    /* display: none; */
+  }
+  .booth {
+    display: flex;
+    flex-direction: column;
+  }
+
+  /* footer .top {
     display: flex;
     align-items: flex-start;
     justify-content: flex-start;
@@ -278,14 +287,14 @@
 
   .footer-bottom p {
     font-size: 13px;
-  }
-
-  .about {
-    transform: rotate(0deg);
-  }
+  } */
 
   .contact img {
     display: none;
+  }
+
+  .aboutus {
+    height: auto;
   }
 
   .about-content {
@@ -294,18 +303,62 @@
     justify-content: center;
     text-align: center;
     width: 100%;
-    transform: rotate(0deg);
     margin: 0;
+    text-align: justify;
+    padding: 0px 10px;
+    margin-top: 40px;
+  }
+
+  .about-content h1 {
+    margin-bottom: 0px;
+  }
+
+  .services .card {
+    height: auto;
+  }
+
+  .pricing {
+    height: auto;
+  }
+
+  .pricing_cards {
+    margin-top: 0px;
+  }
+
+  .pricing_card {
+    margin: 10px 10px;
+  }
+
+  .testimonial_card {
+    margin: 10px 10px;
+  }
+
+  .left {
+    width: 100%;
+    padding: 0px 10px;
+  }
+
+  .left ul {
+    margin: 0px;
   }
 }
 
-@media (max-width: 1221px) {
+@media (min-width: 768.1px) and (max-width: 1221px) {
   html {
-    font-size: 55%;
+    /* font-size: 55%; */
   }
 
-  .main_home {
-    /* padding: 3%; */
+  nav {
+    width: 100%;
+    position: sticky;
+  }
+
+  .menu {
+    width: 400px;
+  }
+
+  .main_content {
+    padding: 3%;
   }
 
   .banner img {
